# dagsterpipe

./: .env.example  .pre-commit-config.yaml  .python-version  .sqlfluff  .sqlfluffignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
dagsterpipe/: __init__.py  config.py
dagsterpipe/assets/: __init__.py  utils.py
dagsterpipe/assets/financial_market/: raw.py
dagsterpipe/jobs/: __init__.py
dagsterpipe/jobs/financial_market/: sync.py
dagsterpipe/resources/: __init__.py  alphavantage_resource.py  parquet_s3_io_manager.py
dagsterpipe/resources/postgres/: dbt_postgres_io_manager.py  postgres_client_resource.py  postgres_io_manager.py  postgres_pandas_type_handler.py  postgres_resource.py
dagsterpipe/schedules/: __init__.py  financial_market.py
dagsterpipe/sensors/: __init__.py
dbt/: dbt_project.yml  profiles.yml
