[tool.poetry]
name = "dagsterpipe"
version = "0.1.0"
description = ""
authors = ["Dennis Gera <geradennis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.4.14"


[tool.poetry.group.dev.dependencies]
dagster-webserver = "^1.4.14"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagsterpipe"